--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
 body {
-    background: blue;
+    background: lightblue;
+    text-align: center;
+    font-family: 'Times New Roman';
+    
   }
+h1{ 
+font-size: 100px;
+font-family: Courier New;
+font-style: oblique;
+margin-bottom: 10px;
+margin-top: 20px;
+}
+h2{ 
+    font-size: 30px;
+    margin-top: 1px;
+
+}
+h3{
+    font-size: 20px;
+    float: left;
+    margin-left: 225px;
+}
+p{
+float: left;
+margin-left: 30px;
+margin-right: 1350px;
+}
+h4{
+    text-align: center;
+    font-size: 00px;
+    margin-right: 500px;
+    margin-bottom: 100px;
+}
+
+
+
+
+h6{
+    float: right;
+    font-size: 15px;
+    margin-bottom: 1px;
+    margin-top: 450px;
+    margin-left: 500px;
+    margin-right: 500px;
+}
